--- a/Diplom_alina/app/views/plans/show.html.haml
+++ b/Diplom_alina/app/views/plans/show.html.haml
@@ -17,9 +17,8 @@
               %b Специальность:
               = @plan.speciality.name
             %p
-              %b Период обучения:
-              = @plan.start_study
-              = @plan.end_study
+              %b Длительность обучения:
+              = @plan.count_month
             %p
               %b Примечание:
               = @plan.note
