--- a/Diplom_alina/app/views/searches/new.html.haml
+++ b/Diplom_alina/app/views/searches/new.html.haml
@@ -13,15 +13,16 @@
               .pull-right
                 %button{:class=>'btn btn-primary'} найти
                 %a{:href=>'#', :class=>'btn btn-default btn-grey'} Сбросить
-          .row
             .col-md-4
-              .form-group
-                %label Имя
-                %input{:class=>'form-control', :name=>'first_name', :placeholder=>'Введите имя студента'}
+          .row
             .col-md-4
               .form-group
                 %label Фамилия
                 %input{:class=>'form-control', :name=>'second_name', :placeholder=>'Введите фамилию студента'}
+            .col-md-4
+              .form-group
+                %label Имя
+                %input{:class=>'form-control', :name=>'first_name', :placeholder=>'Введите имя студента'}
             .col-md-4
               .form-group
                 %label Отчество
