add in change list plan group term

--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -68,6 +68,10 @@
                       %strong= "Студенты"
                       %ul{:class=>'nav nav-second-level collapse'}
                         %li
+                          %a{:href=>"/students"}
+                            %i{:class=>'glyphicon glyphicon-plus'}
+                              %i= 'Все студенты'
+                        %li
                           %a{:href=>"/students/new"}
                             %i{:class=>'glyphicon glyphicon-plus'}
                               %i= 'Добавить студента'
