--- a/Diplom_alina/app/views/layouts/application.html.haml
+++ b/Diplom_alina/app/views/layouts/application.html.haml
@@ -69,7 +69,7 @@
                       %ul{:class=>'nav nav-second-level collapse'}
                         %li
                           %a{:href=>"/students"}
-                            %i{:class=>'glyphicon glyphicon-plus'}
+                            %i{:class=>'glyphicon glyphicon-list'}
                               %i= 'Все студенты'
                         %li
                           %a{:href=>"/students/new"}
