--- a/Diplom_alina/app/views/terms/_form.html.haml
+++ b/Diplom_alina/app/views/terms/_form.html.haml
@@ -46,4 +46,6 @@
           .col-md-12
             .form-group
               .actions.pull-left
-                = f.submit 'Сохранить', class: "btn btn-primary", :disabled=>true
+                / = f.submit 'Сохранить', class: "btn btn-primary", :disabled=>true
+                = f.submit 'Сохранить', class: "btn btn-primary"
+
